# sifr-demo-app

./: Cargo.toml  README.md  sifr.toml
sifr/app/: __init__.sifr  main.sifr  migrate.sifr
src/: __init__.sifr  main.sifr  migrate.sifr
