[package]
name = "sifr-demo-app"
version = "0.1.0"
edition = "2024"

[package.metadata.sifr]
manifest = "sifr.toml"

[package.metadata.sifr.aliases]
demo_json_v1 = { dependency = "demo_json_v1", import = "demo_json_v1" }
demo_json_v2 = { dependency = "demo_json_v2", import = "demo_json_v2" }

[dependencies]
sifr-demo-http = { path = "../sifr-demo-http" }
demo_json_v1 = { package = "sifr-demo-json", path = "../sifr-demo-json" }
demo_json_v2 = { package = "sifr-demo-json", path = "../sifr-demo-json-v2" }

[dev-dependencies]
sifr-demo-test-support = { path = "../sifr-demo-test-support" }

[workspace]
