[package]
name = "sifr-demo-app"
version = "0.1.0"
edition = "2024"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "sifr.toml",
  "src/**/*.sifr",
  "src/lib.rs",
  "README.md"
]

# sifr-managed
[package.metadata.sifr]
manifest = "sifr.toml"
# end sifr-managed

[dependencies]
sifr-demo-http = { path = "../sifr-demo-http" }
demo_json_v1 = { package = "sifr-demo-json", path = "../sifr-demo-json" }
demo_json_v2 = { package = "sifr-demo-json", path = "../sifr-demo-json-v2" }

[dev-dependencies]
sifr-demo-test-support = { path = "../sifr-demo-test-support" }

[workspace]
